--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,21 +1,167 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
   <title>Control sobre tu vida y gastos 📋</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="manifest.json" href="/manifest.json" />
+  <meta name="theme-color" content="#ff6600" />
+  
+  <style>
+    #auth-section {
+      display: none;
+    }
+
+    body.auth-mode {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #000000;
+      color: #fff;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .auth-container {
+      width: 100%;
+      max-width: 400px;
+      padding: 2rem;
+      background: #e93306;
+      border-radius: 16px;
+      text-align: center;
+    }
+
+    .auth-container h1 {
+      margin-bottom: 1.5rem;
+      font-size: 2rem;
+      color: #fff;
+    }
+
+    .auth-container form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .auth-container input {
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      outline: none;
+      background-color: #fff;
+      color: #000;
+    }
+
+    .auth-container button {
+      padding: 0.75rem;
+      font-size: 1rem;
+      background-color: #000;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .auth-container button:hover {
+      background-color: #1a1a1a;
+    }
+
+    .tab-buttons {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 1rem;
+      gap: 0.5rem;
+    }
+
+    .tab-btn {
+      padding: 0.5rem 1rem;
+      border: 1px solid #fff;
+      background: transparent;
+      color: #fff;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .tab-btn:hover {
+      background-color: rgba(255, 255, 255, 0.15);
+    }
+
+    .tab-btn.active {
+      background-color: #fff;
+      color: #e93306;
+      font-weight: bold;
+    }
+
+    .tab-content {
+      display: none;
+      animation: fadeIn 0.4s ease forwards;
+    }
+
+    .tab-content.active {
+      display: block;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <div class="container">
+  <!-- SECCIÓN DE LOGIN / REGISTRO -->
+  <div id="auth-section">
+    <div class="auth-container">
+      <h1>𝐆𝐄𝐓 𝐀 𝐏𝐋𝐀𝐍</h1>
+
+      <div class="tab-buttons">
+        <button class="tab-btn active" data-tab="login-tab">Iniciar sesión</button>
+        <button class="tab-btn" data-tab="register-tab">Registrarse</button>
+      </div>
+
+      <div id="login-tab" class="tab-content active">
+        <h2>Inicia sesión</h2>
+        <form id="login-form">
+          <input type="email" id="login-email" placeholder="Correo electrónico" required />
+          <input type="password" id="login-password" placeholder="Contraseña" required />
+          <button type="submit">Ingresar</button>
+        </form>
+      </div>
+
+      <div id="register-tab" class="tab-content">
+        <h2>Regístrate</h2>
+        <form id="register-form">
+          <input type="text" id="register-username" placeholder="Tu nombre" required />
+          <input type="email" id="register-email" placeholder="Correo electrónico" required />
+          <input type="password" id="register-password" placeholder="Contraseña" required />
+          <button type="submit">Crear cuenta</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <div class="container" id="app-section">
     <header class="header">
       <h1>ＰＬＡＮＥＯ</h1>
+      <button id="logout-btn">Cerrar sesión</button>
     </header>
 
-    <!--notificación mostrada -->
     <div class="notification" id="notification" style="display:none;"></div>
 
-    <!-- PESTAÑAS (TAREAS,BALANCE,GASTOS) -->
     <div class="dashboard">
       <div class="dashboard-card card-tasks">
         <div class="dashboard-card-content">
@@ -40,14 +186,17 @@
       </div>
     </div>
 
-    <!-- pestañas interactivas  -->
     <div class="main-card">
       <div class="tabs">
-        <button class="tab-button active" data-tab="tasks"><h4>📝 Tareas</h4></button>
-        <button class="tab-button" data-tab="expenses"><h4>💸 Finanza</h4></button>
+        <button class="tab-button active" data-tab="tasks">
+          <h4>📝 Tareas</h4>
+        </button>
+        <button class="tab-button" data-tab="expenses">
+          <h4>💸 Finanza</h4>
+        </button>
       </div>
 
-      <!-- SECCIÓN DE TAREAS -->
+      <!-- TAREAS -->
       <div class="tab-content active" id="tasks">
         <div class="form-section">
           <h3>Agregar Nueva Tarea</h3>
@@ -76,7 +225,7 @@
         <div class="item-list" id="task-list"></div>
       </div>
 
-      <!-- SECCIOÓN DE GASTOS-->
+      <!-- GASTOS -->
       <div class="tab-content" id="expenses">
         <div class="form-section">
           <h3>Ingresos Mensuales</h3>
@@ -86,9 +235,7 @@
               <input type="number" id="monthly-income" class="form-control" value="0" />
             </div>
           </div>
-        </div>
 
-        <div class="form-section">
           <h3>Agregar Gasto</h3>
           <div class="form-grid">
             <div class="form-group">
@@ -119,6 +266,10 @@
       </div>
     </div>
   </div>
+
+  <script src="auth.js"></script>
   <script src="app.js"></script>
+
 </body>
+
 </html>
