--- a/front-end/index.html
+++ b/front-end/index.html
@@ -273,9 +273,8 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
-  <script src="auth.js"></script>
-
+  <script src="app.js" defer></script>
+  <script src="auth.js" defer></script>
 
 </body>
 
