mejora del login y auth

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -154,7 +154,12 @@
     </div>
   </div>
 
-  <div class="container" id="app-section">
+  <div id="loader" class="loader-container" style="display: none";>
+    <div class="spinner"></div>
+  </div>
+
+
+  <div class="container" id="app-section" style="display: none";>
     <header class="header">
       <h1>ＰＬＡＮＥＯ</h1>
       <div class="logout-menu">
